--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,6 @@
 useDynLib(teos10)
-export(gsw_SA_from_SP,
-       gsw_SP_from_C)
+export(
+        gsw_CT_from_t,
+        gsw_SA_from_SP,
+        gsw_SP_from_C)
 
